# range_management_deck_panel_api

./: .env-example  Cargo.toml  README.md  build.rs  index.html  manifest.xml
DeckPanel/Read_Write - Copy/: Deck1_Panel2 Read From PLC.txt  Deck5_Panel Read From PLC.txt
examples/: Deck1_Panel1 Read From PLC.txt  Deck1_Panel2 Read From PLC.txt
src/: error.rs  helper.rs  main.rs  response.rs  router.rs
src/deck1_1/: handler.rs
src/deck1_2/: handler.rs
src/deck5/: handler.rs
