[package]
name = "deck_api"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winres= "0.1.12"

actix-web = "3"
serde = "1"
env_logger = "0.9.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
derive_more = "0.99.16"


[build-dependencies]
winres= "0.1.12"
